--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "clsx": "^1.1.1",
     "cookies": "^0.8.0",
     "date-fns": "^2.28.0",
+    "fs": "^0.0.1-security",
+    "gray-matter": "^4.0.3",
     "http-proxy": "^1.18.1",
     "next": "11.1.2",
+    "path": "^0.12.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "swr": "^1.0.1"
